JF 2/9 1:24 final touches required